--- a/src/routes/home/home.html
+++ b/src/routes/home/home.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
-    <head> </head>
+    <head>
+        <!-- This is equivalent to a HTTP header -->
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <title>Home</title>
+    </head>
     <body>
         <p>Welcome to our newsletter!</p>
     </body>
