--- a/src/routes/admin/dashboard.html
+++ b/src/routes/admin/dashboard.html
@@ -7,5 +7,9 @@
 
     <body>
         <p>Welcome {{username}}!</p>
+        <p>Available actions:</p>
+        <ol>
+            <li><a href="/admin/password">Change password</a></li>
+        </ol>
     </body>
 </html>
