make test pass: new passwords do not match

--- a/src/routes/admin/password/get.html
+++ b/src/routes/admin/password/get.html
@@ -5,7 +5,7 @@
         <title>Change Password</title>
     </head>
     <body>
-        {{{messages}}}
+        {{{error_html}}}
         <form action="/admin/password" method="post">
             <label
                 >Current password
