--- a/src/routes/admin/dashboard.html
+++ b/src/routes/admin/dashboard.html
@@ -10,6 +10,11 @@
         <p>Available actions:</p>
         <ol>
             <li><a href="/admin/password">Change password</a></li>
+            <li>
+                <form name="logoutForm" action="/admin/logout" method="post">
+                    <input type="submit" value="Logout" />
+                </form>
+            </li>
         </ol>
     </body>
 </html>
