--- a/src/routes/admin/newsletter/get.html
+++ b/src/routes/admin/newsletter/get.html
@@ -30,6 +30,12 @@
                 />
             </label>
             <br />
+            <input
+                hidden
+                type="text"
+                name="idempotency_key"
+                value="{idempotency_key}"
+            />
             <button type="submit">Send a newsletter issue</button>
         </form>
         <p><a href="/admin/dashboard">&lt;- Back</a></p>
